# GroceryWebScraper

./: data_testing.py  grocery_data.json  grocery_list.py  main.py  process_prices.py  requirements.txt  webscraper.py
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml
GroceryScraper/: README.md  pyproject.toml
GroceryScraper/.github/workflows/: python-app.yml
GroceryScraper/groceryscraper/: data_testing.py  database_connection.py  grocery_list.py  main.py  organize_data.py  process_prices.py  shoprite_grocery_data.json  shoprite_grocery_data_copy.json  shoprite_process_prices.py  shoprite_webscraper.py  webscraper.py  wegmans_process_prices.py  wegmans_webscraper.py
GroceryScraper/groceryscraper/database/: organize_data.py
GroceryScraper/groceryscraper/grocery_data/: grocery_list.py  shoprite_grocery_data.json
GroceryScraper/groceryscraper/processing_prices/: shoprite_process_prices.py
GroceryScraper/groceryscraper/testing_data/: data_testing.py
GroceryScraper/groceryscraper/webscrapers/: shoprite_webscraper.py  wegmans_webscraper.py
GroceryScraper/tests/: false_test_webscraper.py  test_process_data.py  test_process_data_shoprite.py  test_process_data_wegmans.py  test_webscraper.py
Tests/: test_process_data.py  test_webscraper.py
