[tool.poetry]
name = "groceryscraper"
version = "0.1.0"
description = ""
authors = ["Joseph Porrino <joeyporrino1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.14.0"
coverage = "^7.3.2"
pytest = "^7.4.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
